fix(): re-adds overflow hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,10 @@ body {
 	padding: var(--padding);
 }
 
+body > * {
+	overflow: hidden;
+}
+
 a {
 	color: var(--color-link);
 	text-decoration: underline;
